--- a/portifolio/assets/css/global.css
+++ b/portifolio/assets/css/global.css
@@ -18,13 +18,23 @@
 }
 
 body {
-    background-image: url('/portifolio/assets/imagens/background/back-2.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    min-height: 100vh;
+    background: rgb(247,168,206);
+    background: linear-gradient(130deg, rgba(247,168,206,1) 0%, rgba(215,33,161,1) 9%, rgba(0,0,0,1) 33%, rgba(0,0,0,1) 68%, rgba(153,22,125,1) 85%, rgba(115,67,193,1) 100%);
     color: #ffffff;
-    height: 100vh;
-    width: 99vw;
+}
+
+.back {
+    background-size: cover;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 @media screen and (min-width: 768px) {
