--- a/projeto-pokedex/assets/css/global.css
+++ b/projeto-pokedex/assets/css/global.css
@@ -1,6 +1,7 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
     box-sizing: border-box;
+    font-weight: bold;
 }
 
 body {
