--- a/projeto-pokedex/assets/css/individualPoke.css
+++ b/projeto-pokedex/assets/css/individualPoke.css
@@ -4,13 +4,41 @@
     box-sizing: border-box;
 }
 
+:root {
+    --font-xl: clamp(1rem, 1.2vw + 0.1rem, 3rem);
+    --font-mid: clamp(.8rem, .8vw + 0.1rem, 2rem);
+    --font-small: clamp(.5rem, .5vw + 0.1rem, 1rem);
+}
+
+body {
+    position: relative;
+}
+
 li {
     list-style: none;
 }
 
 .pokemonIndividual {
-    background-color: #74CB48;
-    width: 25rem;
+    position: relative;
+    width: 90vw;
+    height: 85vh;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: 4px 5px 4px 0px rgba(0, 0, 0, 0.123);
+}
+
+.background-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/imgs/pokebola.svg');
+    background-repeat: no-repeat;
+    background-size: 13rem;
+    background-position: right top;
+    opacity: 0.150;
+    margin: 10px -10px;
 }
 
 .headerPoke {
@@ -28,7 +56,7 @@ li {
     border: none;
     width: 1.825rem;
     height: 1.825rem;
-    background-color: #74CB48;
+    background-color: transparent;
     background-image: url('/imgs/seta-1.svg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -45,7 +73,6 @@ li {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #74CB48;
     height: 10rem;
 }
 
@@ -54,7 +81,7 @@ li {
     border: none;
     width: 1.825rem;
     height: 1.825rem;
-    background-color: #74CB48;
+    background-color: transparent;
     background-image: url('/imgs/seta-2.svg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -62,7 +89,7 @@ li {
 
 .photoIndividual {
     position: absolute;
-    top: 2rem;
+    top: 1rem;
     left: 50%;
     transform: translateX(-50%);
     height: 200px;
@@ -74,7 +101,7 @@ li {
     border: none;
     width: 1.825rem;
     height: 1.825rem;
-    background-color: #74CB48;
+    background-color: transparent;
     background-image: url('/imgs/seta-2.svg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -88,9 +115,12 @@ li {
     justify-content: center;
     background-color: #FFFFFF;
     padding-top: 20%;
-    width: 95%;
+    padding-bottom: 2rem;
+    width: 97%;
+    height: 68.5%;
     border-radius: 10px;
     margin: auto;
+    box-shadow: rgba(0, 0, 0, 0.377) 0px 0px 6px 0px inset;;
 }
 
 .tipo {
@@ -105,14 +135,12 @@ li {
     border-radius: 20px;
     color: #fff;
     margin: 0rem 0.825rem;
-    font-size: 0.825rem;
 }
 
 .titlepoke {
-    margin: 2rem 0;
-    color: #74CB48;
-    font-size: 1.250rem;
+    margin: 1rem 0;
     font-weight: bold;
+    font-size: var(--font-xl);
 }
 
 .dados-container {
@@ -133,8 +161,9 @@ li {
 
 .dados .dado {
     font-weight: normal;
-    font-size: 1rem;
+    font-size: 4vw;
     margin-bottom: 21px;
+    font-size: var(--font-mid);
 }
 
 #weight {
@@ -144,9 +173,9 @@ li {
 #weight::before {
     content: '';
     display: inline-block;
-    width: 20px;
-    height: 20px;
-    margin: 0 10px;
+    width: 17px;
+    height: 17px;
+    margin: 0 5px;
     background-image: url('/imgs/weight.svg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -160,9 +189,9 @@ li {
 #height::before {
     content: '';
     display: inline-block;
-    width: 20px;
-    height: 20px;
-    margin: 0 10px;
+    width: 17px;
+    height: 17px;
+    margin: 0 5px;
     background-image: url('/imgs/height.svg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -186,20 +215,86 @@ li {
 
 #moves span {
     font-weight: normal;
-    font-size: 1rem;
 }
 
 .reference {
     font-weight: normal;
-    font-size: .725rem;
     color: #666666;
+    font-size: var(--font-small);
 }
 
 .description {
     font-weight: normal;
-    font-size: .825rem;
-    margin: auto;
-    padding: 1rem;
+    margin: 0.5rem auto;
+    padding: 0rem 1rem;
+    font-size: var(--font-mid);
 }
 
+.states {
+    width: 95%;
+    display: grid;
+    grid-template-columns: 1fr 0.250fr 8.750fr;
+    align-items: center;
+}
 
+.atributes {
+    padding-left: 1rem;
+    justify-self: flex-end;
+}
+
+.atribute {
+    grid-column: 1;
+    padding: .2rem 0rem;
+    text-align: end;
+    font-size: var(--font-mid);
+}
+
+.division {
+    background-color: #E0E0E0;
+    width: 2px;
+    height: 110%;
+    border-radius: 10px;
+    opacity: .7;
+    align-self: center;
+    justify-self: center;
+    margin: 0 0.825rem;
+}
+
+.powers {
+    grid-column: 3;
+}
+
+.state {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: .2rem 0;
+}
+
+.power {
+    padding-right: 1rem;
+    font-weight: normal;
+    font-size: var(--font-mid);
+}
+
+.bar {
+    width: 80%;
+    height: 5px;
+    background-color: #74CB48;
+    border-radius: 20px;
+}
+
+@media screen and (min-width: 550px) {
+    .informations {
+        padding-top: 12%;
+    }
+}
+
+@media screen and (min-width: 768px){
+    .informations {
+        padding-top: 8%;
+    }
+    .pokemonIndividual {
+        width: 90%;
+    }
+}
