--- a/projeto-pokedex/assets/css/individualPoke.css
+++ b/projeto-pokedex/assets/css/individualPoke.css
@@ -5,9 +5,10 @@
 }
 
 :root {
-    --font-xl: clamp(1rem, 1.2vw + 0.1rem, 3rem);
-    --font-mid: clamp(.8rem, .8vw + 0.1rem, 2rem);
-    --font-small: clamp(.5rem, .5vw + 0.1rem, 1rem);
+    --font-xxl: clamp(6rem, 5vw + 0.1rem, 4rem)
+    --font-xl: clamp(.7rem, 1.2vw + 0.1rem, 3rem);
+    --font-mid: clamp(.6rem, .8vw + 0.1rem, 2rem);
+    --font-small: clamp(.5rem, .8vw + 0.1rem, 1rem);
 }
 
 body {
@@ -20,19 +21,18 @@ li {
 
 
 .container {
-    position: absolute;
-    top: 50%;
+    position: fixed;
+    top: 100%;
     left: 50%;
+    transform: translate(-50%, -50%);
     opacity: 0;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -30%);
     transition: 500ms ease-in-out;
 }
 
 .pokemonIndividual {
     position: relative;
     width: 90vw;
-    height: 85vh;
+    height: 30rem;
     margin: auto;
     border-radius: 10px;
     box-shadow: 4px 5px 4px 0px rgba(0, 0, 0, 0.123);
@@ -46,7 +46,7 @@ li {
     height: 100%;
     background-image: url('/imgs/pokebola.svg');
     background-repeat: no-repeat;
-    background-size: 13rem;
+    background-size: 8rem;
     background-position: right top;
     opacity: 0.150;
     margin: 10px -10px;
@@ -59,6 +59,10 @@ li {
     margin-right: 1rem;
     display: flex;
     flex-direction: row;
+}
+
+.name {
+    font-size: var(--font-xxl);
 }
 
 .back {
@@ -82,10 +86,11 @@ li {
 
 .photoSection {
     position: relative;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 8fr 1fr;
     align-items: center;
     justify-content: space-between;
-    height: 10rem;
+    height: 5rem;
 }
 
 .previous {
@@ -97,15 +102,17 @@ li {
     background-image: url('/imgs/seta-2.svg');
     background-repeat: no-repeat;
     background-size: cover;
+    grid-column: 1;
+    cursor: pointer;
 }
 
 .photoIndividual {
     position: absolute;
     top: .3rem;
     left: 50%;
-    transform: translateX(-50%);
-    height: 200px;
-    max-width: 40%;
+    transform: translate(-50%, -5%);
+    height: 100px;
+    max-width: 100%;
 }
 
 .next {
@@ -118,6 +125,9 @@ li {
     background-repeat: no-repeat;
     background-size: cover;
     transform: rotate(180deg);
+    grid-column: 3;
+    cursor: pointer;
+    justify-self: flex-end;
 }
 
 .informations {
@@ -126,10 +136,10 @@ li {
     align-items: center;
     justify-content: center;
     background-color: #FFFFFF;
-    padding-top: 20%;
+    padding-top: 3rem;
     padding-bottom: 2rem;
     width: 97%;
-    height: 68.5%;
+    height: 21rem;
     border-radius: 10px;
     margin: auto;
     box-shadow: rgba(0, 0, 0, 0.377) 0px 0px 6px 0px inset;;
@@ -147,6 +157,7 @@ li {
     border-radius: 20px;
     color: #fff;
     margin: 0rem 0.825rem;
+    font-size: var(--font-xl);
 }
 
 .titlepoke {
@@ -161,7 +172,7 @@ li {
     align-items: center;
     justify-content: space-evenly;
     width: 95%;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
 }
 
 .dados {
@@ -291,26 +302,59 @@ li {
 
 .bar {
     width: 80%;
-    height: 5px;
+    height: 4px;
     background-color: #74CB48;
     border-radius: 20px;
 }
 
 @media screen and (min-width: 550px) {
+    .pokemonIndividual {
+        width: 70vw;
+    }
+
     .informations {
-        padding-top: 12%;
+        padding-top: 3rem;
+        height: 21rem;
     }
 }
 
 @media screen and (min-width: 768px){
-    .informations {
-        padding-top: 8%;
-    }
     .pokemonIndividual {
-        width: 90%;
+        width: 60vw;
     }
 
-    .container {
-        width: 40%;
+}
+
+@media screen and (min-width: 1024px){
+    .pokemonIndividual {
+        width: 30vw;
+        height: 42rem;
+    }
+
+    .background-overlay {
+        background-size: 15rem;
+    }
+
+    .photoSection {
+        height: 10rem;
+    }
+
+    .photoIndividual {
+        height: 200px;
+    }
+
+    .informations {
+        padding-top: 1rem;
+        width: 98%;
+        height: 28rem;
+    }
+
+    .tipo {
+        padding-top: 2rem;
+    }
+
+    .informations h2 {
+        padding: 0rem 0rem 1rem 0rem;
+        margin-bottom: .5rem;
     }
 }
