--- a/projeto-pokedex/assets/css/individualPoke.css
+++ b/projeto-pokedex/assets/css/individualPoke.css
@@ -99,7 +99,7 @@ li {
     width: 1.825rem;
     height: 1.825rem;
     background-color: transparent;
-    background-image: url('/imgs/seta-2.svg');
+    background-image: url('./imgs/seta-2.svg');
     background-repeat: no-repeat;
     background-size: cover;
     grid-column: 1;
@@ -121,7 +121,7 @@ li {
     width: 1.825rem;
     height: 1.825rem;
     background-color: transparent;
-    background-image: url('/imgs/seta-2.svg');
+    background-image: url('./imgs/seta-2.svg');
     background-repeat: no-repeat;
     background-size: cover;
     transform: rotate(180deg);
@@ -198,7 +198,7 @@ li {
     width: 17px;
     height: 17px;
     margin: 0 5px;
-    background-image: url('/imgs/weight.svg');
+    background-image: url('./imgs/weight.svg');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -214,7 +214,7 @@ li {
     width: 17px;
     height: 17px;
     margin: 0 5px;
-    background-image: url('/imgs/height.svg');
+    background-image: url('./imgs/height.svg');
     background-size: cover;
     background-repeat: no-repeat;
     transform: rotate(90deg);
